# RewardAnything

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-server.txt  requirements.txt  setup.py
.github/workflows/: deploy-pages.yml  publish-to-pypi.yml
docs/: PROJECT_DOCS.md
examples/: basic_usage.py  local_usage.py  remote_usage.py  server_config.json  transformers_usage.py
pages/: .gitignore  Gemfile  README.md  _config.yml  index.html  setup.sh
pages/_layouts/: default.html
pages/assets/images/: README.md
rewardanything/: __init__.py  cli.py  client.py  local.py  models.py  processing.py  serve.py  utils.py
