[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewardanything"
version = "1.0.0"
description = "RewardAnything: Generalizable Principle-Following Reward Models"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Zhuohao Yu", email = "zhuohaoyu1228@gmail.com"},
    {name = "Jiali Zeng"},
    {name = "Weizheng Gu"},
    {name = "Yidong Wang"},
    {name = "Jindong Wang"},
    {name = "Fandong Meng"},
    {name = "Jie Zhou"},
    {name = "Yue Zhang"},
    {name = "Shikun Zhang"},
    {name = "Wei Ye"}
]
maintainers = [
    {name = "Zhuohao Yu", email = "zhuohaoyu1228@gmail.com"}
]
keywords = ["machine learning", "reward modeling", "RLHF", "principle-following", "evaluation", "LLM", "alignment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "transformers>=4.35.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "tqdm>=4.64.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
local = [
    "torch>=1.13.0",
    "transformers>=4.35.0",
]
all = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "torch>=1.13.0",
    "transformers>=4.35.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zhuohaoyu/RewardAnything"
Repository = "https://github.com/zhuohaoyu/RewardAnything"
Documentation = "https://github.com/zhuohaoyu/RewardAnything#readme"
"Bug Tracker" = "https://github.com/zhuohaoyu/RewardAnything/issues"

[project.scripts]
rewardanything = "rewardanything.cli:main"

[tool.setuptools.packages.find]
include = ["rewardanything*"]

[tool.setuptools.package-data]
rewardanything = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 